Added route to delete docs (#46)
